--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
+    "babel-loader": "^8.2.2",
     "jest": "^27.0.6",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
